# eth-near-marketplace

./: README.md
contracts/: README.md
contracts/eth/: DortzioMarketplace.sol  DortzioNFT.sol  DortzioNFTFactory.sol  README.md  hardhat.config.ts  market.sol
contracts/eth/ERC1155/: .env  hardhat.config.js  package-lock.json  package.json
contracts/eth/ERC1155/contracts/: AuctionAndBids.sol  BuyAndSell.sol  GetFreeNFTs.sol  IAuctionAndBids.sol  IBuyAndSell.sol  IGetFreeNFTs.sol  INFT.sol  (+2 more)
contracts/eth/ERC721/: package-lock.json  package.json
contracts/eth/contracts/: 1155.sol  DortzioMarketplace.sol  DortzioNFT.sol  DortzioNFTFactory.sol  _1155.sol
contracts/eth/test/: dortzio.ts
contracts/near/: NEAR.rules  README.md
contracts/near/event/: Cargo.toml  README.md  build.sh  deploy.sh
contracts/near/market/: Cargo.toml  README.md  build.sh  deploy.sh  test.sh
contracts/near/nft/: Cargo.toml  README.md  build.sh  deploy.sh  test.sh
contracts/near/nft/src/: approval.rs  constants.rs  enumeration.rs  events.rs  internal.rs  lib.rs  metadata.rs  mint.rs  nft_core.rs  royalty.rs  utils.rs
contracts/near/proposal/: Cargo.toml  README.md  build.sh  deploy.sh
contracts/near/testnet/: bitzio.testnet.json  event3.bitzio.testnet.json  market10.bitzio.testnet.json  nft15.bitzio.testnet.json  proposal3.bitzio.testnet.json  wildonion.testnet.json  wome.testnet.json
models/: AssetActivity.model  Auction.model  Listings.model  NFT.model  NFTCollections.model  Offers.model  Owners.model  PerpetualRoyalty.model  PriceHistory.model  Property.model  users.model
(+47 files in other folders)
